--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.6.1",
     "react-dom": "^19.0.0",
+    "react-image-crop": "^11.0.10",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
